# miniWeather

./: .gitignore  DEVLOG.md  README.md  main.py  pyproject.toml  test.py
src/api/: weather_api.py
src/cache/: cache_manager.py
src/test/: test_weather_api.py
src/ui/: weather_display.py
